--- a/index.html
+++ b/index.html
@@ -22,58 +22,93 @@
       <h1>Nate Walton</h1>
       <nav><a href="/">Home</a><a href="/">Portfolio</a></nav>
     </header>
-    <div class="main">
-      <div class="portfolio">
-        <nav><a href="#" class="ir next">Next slide</a><a href="#" class="ir prev">Previous slide</a></nav>
-        <div class="project jonah">
-          <div class="title">
-            <h2>Jonah</h2>
-          </div>
-          <div class="intro slide">
-            <p>text here</p>
-          </div>
-          <div class="slide slide-1"><a href="#" class="ir infobutton">Show info</a>
-            <div class="image"><img src="img/jonah1.jpg"></div>
-            <div class="info">
-              <h3>Process</h3>
-              <ul>
-                <li>Linoleum cut &amp; letterpress</li>
-                <li>Printed on a Vandercook SP-15</li>
-                <li>Bound in hard case</li>
-              </ul>
-              <h3>Media</h3>
-              <ul>
-                <li>8pt Univers</li>
-                <li>Somerset book</li>
-              </ul>
-              <h3>Specs</h3>
-              <ul>
-                <li>8" x 12” x 1/2"</li>
-                <li>24 pages</li>
-                <li>2005</li>
-              </ul>
+    <div class="main portfolio">
+      <nav><a href="#" class="ir next">Next slide</a><a href="#" class="ir prev">Previous slide</a></nav>
+      <div id="intro" data-project="0" class="project">
+        <div class="title">
+          <h2>Work</h2>
+        </div>
+        <div id="intro-1" class="slide intro last">
+          <div class="wrapper">
+            <div class="sizable">
+              <p>Intro screen</p>
             </div>
           </div>
-          <div class="slide slide-2 visible"><a href="#" class="ir infobutton">Show info</a>
-            <div class="image"><img src="img/jonah2.jpg"></div>
-            <div class="info">
-              <h3>Process</h3>
-              <ul>
-                <li>Linoleum cut &amp; letterpress</li>
-                <li>Printed on a Vandercook SP-15</li>
-                <li>Bound in hard case</li>
-              </ul>
-              <h3>Media</h3>
-              <ul>
-                <li>8pt Univers</li>
-                <li>Somerset book</li>
-              </ul>
-              <h3>Specs</h3>
-              <ul>
-                <li>8" x 12” x 1/2"</li>
-                <li>24 pages</li>
-                <li>2005</li>
-              </ul>
+        </div>
+      </div>
+      <div id="jonah" data-project="1" class="project current">
+        <div class="title">
+          <h2><a href="#jonah">Jonah</a></h2>
+        </div>
+        <div id="jonah-1" class="intro slide visible">
+          <div class="wrapper">
+            <div class="image sizable"><img src="img/jonahintro.png"></div>
+          </div>
+          <div class="wrapper">
+            <div class="introtext sizable">
+              <p>I usually prefer relief printing to other traditional artforms. </p>
+            </div>
+          </div>
+        </div>
+        <div id="jonah-2" class="slide">
+          <div class="wrapper">
+            <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
+          </div>
+          <div class="wrapper">
+            <div class="image sizable"><img src="img/jonah1.jpg"></div>
+          </div>
+          <div class="wrapper">
+            <div class="info sizable">
+              <div class="infoinner">
+                <h3>Process</h3>
+                <ul>
+                  <li>Linoleum cut &amp; letterpress</li>
+                  <li>Printed on a Vandercook SP-15</li>
+                  <li>Bound in hard case</li>
+                </ul>
+                <h3>Media</h3>
+                <ul>
+                  <li>8pt Univers</li>
+                  <li>Somerset book</li>
+                </ul>
+                <h3>Specs</h3>
+                <ul>
+                  <li>8" x 12” x 1/2"</li>
+                  <li>24 pages</li>
+                  <li>2005</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="jonah-3" class="slide last">
+          <div class="wrapper">
+            <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
+          </div>
+          <div class="wrapper">
+            <div class="image sizable"><img src="img/jonah2.jpg"></div>
+          </div>
+          <div class="wrapper">
+            <div class="info sizable">
+              <div class="infoinner">
+                <h3>Process</h3>
+                <ul>
+                  <li>Linoleum cut &amp; letterpress</li>
+                  <li>Printed on a Vandercook SP-15</li>
+                  <li>Bound in hard case</li>
+                </ul>
+                <h3>Media</h3>
+                <ul>
+                  <li>8pt Univers</li>
+                  <li>Somerset book</li>
+                </ul>
+                <h3>Specs</h3>
+                <ul>
+                  <li>8" x 12” x 1/2"</li>
+                  <li>24 pages</li>
+                  <li>2005</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
