Add typogrify, update design

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
         </div>
         <div id="jonah-1" class="intro slide visible">
           <div class="wrapper">
-            <div class="image sizable"><img src="img/jonahintro.png"></div>
+            <div class="introimage sizable"><img src="img/jonahintro.png"></div>
           </div>
           <div class="wrapper">
             <div class="introtext sizable">
-              <p>I usually prefer relief printing to other traditional artforms. </p>
+              <p><span class="leader">I usually prefer</span> relief printing to other traditional media, maybe because it seems to fit so well with letterpress printing. This book has 20 linocut illustrations from the book of Jonah, with images and type printed on a Vandercook SP-15 proof press.</p>
             </div>
           </div>
         </div>
