Implement YAML for data input

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     </header>
     <div class="main portfolio">
       <nav><a href="#" class="ir next">Next slide</a><a href="#" class="ir prev">Previous slide</a></nav>
-      <div id="intro" data-project="0" class="project">
+      <div id="intro" data-project="0" class="project current">
         <div class="title">
           <h2>Work</h2>
         </div>
-        <div id="intro-1" class="slide intro last">
+        <div id="intro-1" class="slide intro last visible">
           <div class="wrapper">
             <div class="sizable">
               <p>Intro screen</p>
@@ -36,17 +36,17 @@
           </div>
         </div>
       </div>
-      <div id="jonah" data-project="1" class="project current">
+      <div data-project="1" id="jonah" class="project">
         <div class="title">
           <h2><a href="#jonah">Jonah</a></h2>
         </div>
-        <div id="jonah-1" class="intro slide visible">
+        <div id="jonah-1" class="intro slide">
           <div class="wrapper">
             <div class="introimage sizable"><img src="img/jonahintro.png"></div>
           </div>
           <div class="wrapper">
             <div class="introtext sizable">
-              <p><span class="leader">I usually prefer</span> relief printing to other traditional media, maybe because it seems to fit so well with letterpress printing. This book has 20 linocut illustrations from the book of Jonah, with images and type printed on a Vandercook SP-15 proof press.</p>
+              <p><span class="leader">I often prefer</span> relief printing to other traditional media, maybe because it works so well with letterpress. This book has 20 linocut illustrations from the book of Jonah, with images and type printed on a Vandercook SP-15 proof press.</p>
             </div>
           </div>
         </div>
@@ -60,23 +60,26 @@
           <div class="wrapper">
             <div class="info sizable">
               <div class="infoinner">
-                <h3>Process</h3>
-                <ul>
-                  <li>Linoleum cut &amp; letterpress</li>
-                  <li>Printed on a Vandercook SP-15</li>
-                  <li>Bound in hard case</li>
-                </ul>
-                <h3>Media</h3>
-                <ul>
-                  <li>8pt Univers</li>
-                  <li>Somerset book</li>
-                </ul>
-                <h3>Specs</h3>
-                <ul>
-                  <li>8" x 12” x 1/2"</li>
-                  <li>24 pages</li>
-                  <li>2005</li>
-                </ul>
+                <h3>Process
+                  <ul>
+                    <li>Linoleum cut &amp;amp; letterpress</li>
+                    <li>Printed on a Vandercook SP-15</li>
+                    <li>Bound in hard case</li>
+                  </ul>
+                </h3>
+                <h3>Media
+                  <ul>
+                    <li>8pt Univers</li>
+                    <li>Somerset book</li>
+                  </ul>
+                </h3>
+                <h3>Specs
+                  <ul>
+                    <li>8&quot; x 12&quot; x 1/2&quot;</li>
+                    <li>24 pages</li>
+                    <li>2005</li>
+                  </ul>
+                </h3>
               </div>
             </div>
           </div>
@@ -91,23 +94,26 @@
           <div class="wrapper">
             <div class="info sizable">
               <div class="infoinner">
-                <h3>Process</h3>
-                <ul>
-                  <li>Linoleum cut &amp; letterpress</li>
-                  <li>Printed on a Vandercook SP-15</li>
-                  <li>Bound in hard case</li>
-                </ul>
-                <h3>Media</h3>
-                <ul>
-                  <li>8pt Univers</li>
-                  <li>Somerset book</li>
-                </ul>
-                <h3>Specs</h3>
-                <ul>
-                  <li>8" x 12” x 1/2"</li>
-                  <li>24 pages</li>
-                  <li>2005</li>
-                </ul>
+                <h3>Process
+                  <ul>
+                    <li>Linoleum cut &amp;amp; letterpress</li>
+                    <li>Printed on a Vandercook SP-15</li>
+                    <li>Bound in hard case</li>
+                  </ul>
+                </h3>
+                <h3>Media
+                  <ul>
+                    <li>8pt Univers</li>
+                    <li>Somerset book</li>
+                  </ul>
+                </h3>
+                <h3>Specs
+                  <ul>
+                    <li>8&quot; x 12&quot; x 1/2&quot;</li>
+                    <li>24 pages</li>
+                    <li>2005</li>
+                  </ul>
+                </h3>
               </div>
             </div>
           </div>
