--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
         <div id="intro-1" class="slide intro last visible">
           <div class="wrapper">
             <div class="sizable">
-              <p>Intro screen</p>
+              <div class="project"><a href="#jonah" class="projectTitle">Jonah</a>
+                <ul>
+                  <li><a href="#jonah-2">Slide 2</a></li>
+                  <li><a href="#jonah-3">Slide 3</a></li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
