Add dynamic project numbering, debug

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div id="intro-1" class="slide intro last visible">
           <div class="wrapper">
             <div class="sizable">
-              <div class="project"><a href="#jonah" class="projectTitle">Jonah</a>
+              <div class="projectThumb"><a href="#jonah" class="projectTitle">Jonah</a>
                 <ul>
                   <li><a href="#jonah-2">Slide 2</a></li>
                   <li><a href="#jonah-3">Slide 3</a></li>
@@ -41,7 +41,7 @@
           </div>
         </div>
       </div>
-      <div data-project="1" id="jonah" class="project">
+      <div data-project='1' id="jonah" class="project">
         <div class="title">
           <h2><a href="#jonah">Jonah</a></h2>
         </div>
