Handle single slides (intro with no image slides)

--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
         <div id="intro-1" class="slide intro last visible">
           <div class="wrapper">
             <div class="sizable">
-              <div class="projectThumb"><a href="#jonah" class="projectTitle">Jonah</a>
-                <ul>
-                  <li><a href="#jonah-2">Slide 2</a></li>
-                  <li><a href="#jonah-3">Slide 3</a></li>
-                </ul>
-              </div>
+              <ul class="projectThumb">
+                <li><a href="#jonah-1" class="projectTitle">Jonah</a></li>
+                <li><a href="#jonah-2">Slide 2</a></li>
+                <li><a href="#jonah-3">Slide 3</a></li>
+              </ul>
+              <ul class="projectThumb">
+                <li><a href="#end-1" class="projectTitle">end</a></li>
+              </ul>
             </div>
           </div>
         </div>
@@ -45,7 +47,7 @@
         <div class="title">
           <h2><a href="#jonah">Jonah</a></h2>
         </div>
-        <div id="jonah-1" class="intro slide">
+        <div id="jonah-1" class="slide intro">
           <div class="wrapper">
             <div class="introimage sizable"><img src="img/jonahintro.png"></div>
           </div>
@@ -120,6 +122,21 @@
                   </ul>
                 </h3>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div data-project='2' id="end" class="project">
+        <div class="title">
+          <h2><a href="#end">end</a></h2>
+        </div>
+        <div id="end-1" class="slide intro last">
+          <div class="wrapper">
+            <div class="introimage sizable"><img src=""></div>
+          </div>
+          <div class="wrapper">
+            <div class="introtext sizable">
+              <p><span class="leader">This is the last</span> slide.</p>
             </div>
           </div>
         </div>
