Add hash navigation

--- a/index.html
+++ b/index.html
@@ -32,18 +32,126 @@
           <div class="wrapper">
             <div class="sizable">
               <ul class="projectThumb">
-                <li><a href="#jonah-1" class="projectTitle">Jonah</a></li>
+                <li><a href="#gifts" class="projectTitle">Sacred Gifts</a></li>
+              </ul>
+              <ul class="projectThumb">
+                <li><a href="#byu" class="projectTitle">BYU Web</a></li>
+              </ul>
+              <ul class="projectThumb">
+                <li><a href="#ls" class="projectTitle">BYU Learning Suite</a></li>
+              </ul>
+              <ul class="projectThumb">
+                <li><a href="#thesis" class="projectTitle">Connections</a></li>
+              </ul>
+              <ul class="projectThumb">
+                <li><a href="#bugs" class="projectTitle">Specimens</a></li>
+              </ul>
+              <ul class="projectThumb">
+                <li><a href="#love" class="projectTitle">Love</a></li>
+              </ul>
+              <ul class="projectThumb">
+                <li><a href="#jonah" class="projectTitle">Jonah</a></li>
                 <li><a href="#jonah-2">Slide 2</a></li>
                 <li><a href="#jonah-3">Slide 3</a></li>
               </ul>
               <ul class="projectThumb">
-                <li><a href="#end-1" class="projectTitle">end</a></li>
+                <li><a href="#ornate" class="projectTitle">Ornate</a></li>
               </ul>
             </div>
           </div>
         </div>
       </div>
-      <div data-project='1' id="jonah" class="project">
+      <div data-project='1' id="gifts" class="project">
+        <div class="title">
+          <h2><a href="#gifts">Sacred Gifts</a></h2>
+        </div>
+        <div id="gifts-1" class="slide intro last">
+          <div class="wrapper">
+            <div class="introimage sizable"><img src=""></div>
+          </div>
+          <div class="wrapper">
+            <div class="introtext sizable">
+              <p><span class="leader">The BYU Museum of Art</span> wanted an iPad app to supplement and enhance the experience of their &lt;i&gt;Sacred Gifts&lt;/i&gt; exhibition. The interface was meant to be easy to use (by even the least tech-savvy patrons) and to maintain focus, both visually and conceptually, on the artwork.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div data-project='2' id="byu" class="project">
+        <div class="title">
+          <h2><a href="#byu">BYU Web</a></h2>
+        </div>
+        <div id="byu-1" class="slide intro last">
+          <div class="wrapper">
+            <div class="introimage sizable"><img src=""></div>
+          </div>
+          <div class="wrapper">
+            <div class="introtext sizable">
+              <p><span class="leader">When BYU web community</span> was tasked with redesigning BYU's home page, it was most important to me that we achieve the right mood. We took inspiration from some of the beautiful places around campus and aimed for the same sort of dignified, inviting feeling on the web. The accompanying templates are meant to make it easy for campus entities to create sites that fit with the BYU web brand.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div data-project='3' id="ls" class="project">
+        <div class="title">
+          <h2><a href="#ls">BYU Learning Suite</a></h2>
+        </div>
+        <div id="ls-1" class="slide intro last">
+          <div class="wrapper">
+            <div class="introimage sizable"><img src=""></div>
+          </div>
+          <div class="wrapper">
+            <div class="introtext sizable">
+              <p><span class="leader">I worked extensively</span> with instructional designers and progammers to help create the BYU Learning Suite. I wrote a style guide and created hundreds of page mockups. I also had a big part in writing the CSS for the site, and part of my ongoing work is to train new designers and programmers on best practices in web design and web application programming.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div data-project='4' id="thesis" class="project">
+        <div class="title">
+          <h2><a href="#thesis">Connections</a></h2>
+        </div>
+        <div id="thesis-1" class="slide intro last">
+          <div class="wrapper">
+            <div class="introimage sizable"><img src=""></div>
+          </div>
+          <div class="wrapper">
+            <div class="introtext sizable">
+              <p><span class="leader">For my MFA thesis</span> I spent a semester in the IU Lilly Special Collections Library soaking in some of the most beautiful works ever created in print. I then designed a library exhibition highlighting many of them, including the _Bruce Rogers World Bible_; Eric Gill’s _Four Gospels_; several Philip Smith bindings; masterpieces from the Kelmscott, Doves, and Cranach presses; Limited Editions Club, Grolier Club, </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div data-project='5' id="bugs" class="project">
+        <div class="title">
+          <h2><a href="#bugs">Specimens</a></h2>
+        </div>
+        <div id="bugs-1" class="slide intro last">
+          <div class="wrapper">
+            <div class="introimage sizable"><img src=""></div>
+          </div>
+          <div class="wrapper">
+            <div class="introtext sizable">
+              <p><span class="leader">I’ve been fascinated with insects</span> ever since my freshman Biology class. So when the idea struck me that both _type_ and _bug_ collections contain specimens, I went to work on some typographic insects. The result is one of my favorite projects I’ve ever done.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div data-project='6' id="love" class="project">
+        <div class="title">
+          <h2><a href="#love">Love</a></h2>
+        </div>
+        <div id="love-1" class="slide intro last">
+          <div class="wrapper">
+            <div class="introimage sizable"><img src=""></div>
+          </div>
+          <div class="wrapper">
+            <div class="introtext sizable">
+              <p><span class="leader">This letterpress broadside</span> was created to celebrate marriage. The text was taken from CS Lewis (_Mere Christianity_) It was the first thing printed from some gorgeous new 24pt Centaur type that we acquired, and it’s accented by a light woodcut illustration.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div data-project='7' id="jonah" class="project">
         <div class="title">
           <h2><a href="#jonah">Jonah</a></h2>
         </div>
@@ -69,21 +177,20 @@
               <div class="infoinner">
                 <h3>Process
                   <ul>
-                    <li>Linoleum cut &amp;amp; letterpress</li>
-                    <li>Printed on a Vandercook SP-15</li>
-                    <li>Bound in hard case</li>
+                    <li>Silk-screened slipcase wrapper</li>
+                    <li>Silk-screened endpapers</li>
+                    <li>Half-bound case with cloth and silk-screened paper</li>
+                    <li>Foil stamped spine</li>
                   </ul>
                 </h3>
                 <h3>Media
                   <ul>
-                    <li>8pt Univers</li>
-                    <li>Somerset book</li>
+                    <li>Fortune Roman type</li>
                   </ul>
                 </h3>
                 <h3>Specs
                   <ul>
-                    <li>8&quot; x 12&quot; x 1/2&quot;</li>
-                    <li>24 pages</li>
+                    <li>4 3/4&quot; X 6 3/4&quot; X 3/4&quot;</li>
                     <li>2005</li>
                   </ul>
                 </h3>
@@ -104,19 +211,19 @@
                 <h3>Process
                   <ul>
                     <li>Linoleum cut &amp;amp; letterpress</li>
-                    <li>Printed on a Vandercook SP-15</li>
+                    <li>Printed on Vandercook SP-15 proof press</li>
                     <li>Bound in hard case</li>
                   </ul>
                 </h3>
                 <h3>Media
                   <ul>
-                    <li>8pt Univers</li>
-                    <li>Somerset book</li>
+                    <li>Univers &amp;amp; Fortune Roman type</li>
+                    <li>Somerset paper</li>
                   </ul>
                 </h3>
                 <h3>Specs
                   <ul>
-                    <li>8&quot; x 12&quot; x 1/2&quot;</li>
+                    <li>4-3/4&quot; X 6-3/4&quot; X 3/4&quot;</li>
                     <li>24 pages</li>
                     <li>2005</li>
                   </ul>
@@ -126,17 +233,17 @@
           </div>
         </div>
       </div>
-      <div data-project='2' id="end" class="project">
+      <div data-project='8' id="ornate" class="project">
         <div class="title">
-          <h2><a href="#end">end</a></h2>
+          <h2><a href="#ornate">Ornate</a></h2>
         </div>
-        <div id="end-1" class="slide intro last">
+        <div id="ornate-1" class="slide intro last">
           <div class="wrapper">
             <div class="introimage sizable"><img src=""></div>
           </div>
           <div class="wrapper">
             <div class="introtext sizable">
-              <p><span class="leader">This is the last</span> slide.</p>
+              <p><span class="leader">I spent some time</span> studying some of the art movements from around the turn of the last century (especially Vienna Secession and Arts and Crafts), and decided to experiment with some of their ideas. I brought together various writings exploring the use of ornament, translated some of the articles from the original German, and created a magazine on the subject.</p>
             </div>
           </div>
         </div>
