--- a/index.html
+++ b/index.html
@@ -170,30 +170,29 @@
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper">
-            <div class="image sizable"><img src="img/jonah1.jpg"></div>
+            <div class="image sizable"><span data-picture data-alt="Slipcase and cover for Jonah book"><span data-src="img/jonah1-400.jpg"></span><span data-src="img/jonah1-800.jpg" data-media="(min-width: 400px)"></span><span data-src="img/jonah1-1600.jpg" data-media="(min-width: 1600px)"></span><span data-src="img/jonah1-3200.jpg" data-media="(min-width: 3200px)"></span>
+                <!-- non-js browsers-->
+                <noscript><img src="img/jonah1-400.jpg" alt="A giant stone face at The Bayon temple in Angkor Thom, Cambodia"></noscript></span></div>
           </div>
           <div class="wrapper">
             <div class="info sizable">
               <div class="infoinner">
-                <h3>Process
-                  <ul>
-                    <li>Silk-screened slipcase wrapper</li>
-                    <li>Silk-screened endpapers</li>
-                    <li>Half-bound case with cloth and silk-screened paper</li>
-                    <li>Foil stamped spine</li>
-                  </ul>
-                </h3>
-                <h3>Media
-                  <ul>
-                    <li>Fortune Roman type</li>
-                  </ul>
-                </h3>
-                <h3>Specs
-                  <ul>
-                    <li>4 3/4&quot; X 6 3/4&quot; X 3/4&quot;</li>
-                    <li>2005</li>
-                  </ul>
-                </h3>
+                <h3>Process</h3>
+                <ul>
+                  <li>Silk-screened slipcase wrapper</li>
+                  <li>Silk-screened endpapers</li>
+                  <li>Cloth-bound book case</li>
+                  <li>Foil stamped spine</li>
+                </ul>
+                <h3>Media</h3>
+                <ul>
+                  <li>Fortune Roman type</li>
+                </ul>
+                <h3>Specs</h3>
+                <ul>
+                  <li>4 ¾&quot; × 6 ¾&quot; × ¾&quot;</li>
+                  <li>2005</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -203,31 +202,30 @@
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper">
-            <div class="image sizable"><img src="img/jonah2.jpg"></div>
+            <div class="image sizable"><span data-picture data-alt="Slipcase and cover for Jonah book"><span data-src="img/jonah2-400.jpg"></span><span data-src="img/jonah2-800.jpg" data-media="(min-width: 400px)"></span><span data-src="img/jonah2-1600.jpg" data-media="(min-width: 1600px)"></span><span data-src="img/jonah2-3200.jpg" data-media="(min-width: 3200px)"></span>
+                <!-- non-js browsers-->
+                <noscript><img src="img/jonah2-400.jpg" alt="A giant stone face at The Bayon temple in Angkor Thom, Cambodia"></noscript></span></div>
           </div>
           <div class="wrapper">
             <div class="info sizable">
               <div class="infoinner">
-                <h3>Process
-                  <ul>
-                    <li>Linoleum cut &amp;amp; letterpress</li>
-                    <li>Printed on Vandercook SP-15 proof press</li>
-                    <li>Bound in hard case</li>
-                  </ul>
-                </h3>
-                <h3>Media
-                  <ul>
-                    <li>Univers &amp;amp; Fortune Roman type</li>
-                    <li>Somerset paper</li>
-                  </ul>
-                </h3>
-                <h3>Specs
-                  <ul>
-                    <li>4-3/4&quot; X 6-3/4&quot; X 3/4&quot;</li>
-                    <li>24 pages</li>
-                    <li>2005</li>
-                  </ul>
-                </h3>
+                <h3>Process</h3>
+                <ul>
+                  <li>Linoleum cut &amp;amp; letterpress</li>
+                  <li>Printed on a Vandercook SP-15</li>
+                  <li>Bound in hard case</li>
+                </ul>
+                <h3>Media</h3>
+                <ul>
+                  <li>Univers &amp;amp; Fortune Roman type</li>
+                  <li>Somerset paper</li>
+                </ul>
+                <h3>Specs</h3>
+                <ul>
+                  <li>4 ¾&quot; × 6 ¾&quot; × ¾&quot;</li>
+                  <li>24 pages</li>
+                  <li>2005</li>
+                </ul>
               </div>
             </div>
           </div>
