Add hi-res media queries for images

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
               </ul>
               <ul class="projectThumb">
                 <li><a href="#jonah" class="projectTitle">Jonah</a></li>
-                <li><a href="#jonah-2">Slide 2</a></li>
-                <li><a href="#jonah-3">Slide 3</a></li>
+                <li><a href="#jonah-2">Slide 2<img src="img/jonah1-400.jpg"></a></li>
+                <li><a href="#jonah-3">Slide 3<img src="img/jonah2-400.jpg"></a></li>
               </ul>
               <ul class="projectThumb">
                 <li><a href="#ornate" class="projectTitle">Ornate</a></li>
@@ -170,9 +170,18 @@
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper">
-            <div class="image sizable"><span data-picture data-alt="Slipcase and cover for Jonah book"><span data-src="img/jonah1-400.jpg"></span><span data-src="img/jonah1-800.jpg" data-media="(min-width: 400px)"></span><span data-src="img/jonah1-1600.jpg" data-media="(min-width: 1600px)"></span><span data-src="img/jonah1-3200.jpg" data-media="(min-width: 3200px)"></span>
+            <div class="image sizable">
+              <div data-picture data-disable-swap-above data-alt="Slipcase and cover for Jonah book">
+                <div data-src="img/jonah1-400.jpg"></div>
+                <div data-src="img/jonah1-800.jpg" data-media="(min-device-pixel-ratio: 2.0)"></div>
+                <div data-src="img/jonah1-800.jpg" data-media="(min-width: 400px)"></div>
+                <div data-src="img/jonah1-1600.jpg" data-media="(min-width: 400px) and (min-device-pixel-ratio: 2.0)"></div>
+                <div data-src="img/jonah1-1600.jpg" data-media="(min-width: 800px)"></div>
+                <div data-src="img/jonah1-3200.jpg" data-media="(min-width: 1600px)"></div>
                 <!-- non-js browsers-->
-                <noscript><img src="img/jonah1-400.jpg" alt="A giant stone face at The Bayon temple in Angkor Thom, Cambodia"></noscript></span></div>
+                <noscript><img src="img/jonah1-400.jpg" alt="A giant stone face at The Bayon temple in Angkor Thom, Cambodia"></noscript>
+              </div>
+            </div>
           </div>
           <div class="wrapper">
             <div class="info sizable">
@@ -202,9 +211,18 @@
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper">
-            <div class="image sizable"><span data-picture data-alt="Slipcase and cover for Jonah book"><span data-src="img/jonah2-400.jpg"></span><span data-src="img/jonah2-800.jpg" data-media="(min-width: 400px)"></span><span data-src="img/jonah2-1600.jpg" data-media="(min-width: 1600px)"></span><span data-src="img/jonah2-3200.jpg" data-media="(min-width: 3200px)"></span>
+            <div class="image sizable">
+              <div data-picture data-disable-swap-above data-alt="Slipcase and cover for Jonah book">
+                <div data-src="img/jonah2-400.jpg"></div>
+                <div data-src="img/jonah2-800.jpg" data-media="(min-device-pixel-ratio: 2.0)"></div>
+                <div data-src="img/jonah2-800.jpg" data-media="(min-width: 400px)"></div>
+                <div data-src="img/jonah2-1600.jpg" data-media="(min-width: 400px) and (min-device-pixel-ratio: 2.0)"></div>
+                <div data-src="img/jonah2-1600.jpg" data-media="(min-width: 800px)"></div>
+                <div data-src="img/jonah2-3200.jpg" data-media="(min-width: 1600px)"></div>
                 <!-- non-js browsers-->
-                <noscript><img src="img/jonah2-400.jpg" alt="A giant stone face at The Bayon temple in Angkor Thom, Cambodia"></noscript></span></div>
+                <noscript><img src="img/jonah2-400.jpg" alt="A giant stone face at The Bayon temple in Angkor Thom, Cambodia"></noscript>
+              </div>
+            </div>
           </div>
           <div class="wrapper">
             <div class="info sizable">
