--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <div class="sizable">
               <ul class="projectThumb">
                 <li><a href="#gifts" class="projectTitle">Sacred Gifts</a></li>
+                <li><a href="#gifts-2">Slide 2<img src="img/sg_nav-400.jpg"></a></li>
               </ul>
               <ul class="projectThumb">
                 <li><a href="#byu" class="projectTitle">BYU Web</a></li>
@@ -65,13 +66,42 @@
         <div class="title">
           <h2><a href="#gifts">Sacred Gifts</a></h2>
         </div>
-        <div id="gifts-1" class="slide intro last">
+        <div id="gifts-1" class="slide intro">
           <div class="wrapper">
             <div class="introimage sizable"><img src=""></div>
           </div>
           <div class="wrapper">
             <div class="introtext sizable">
               <p><span class="leader">The BYU Museum of Art</span> wanted an iPad app to supplement and enhance the experience of their &lt;i&gt;Sacred Gifts&lt;/i&gt; exhibition. The interface was meant to be easy to use (by even the least tech-savvy patrons) and to maintain focus, both visually and conceptually, on the artwork.</p>
+            </div>
+          </div>
+        </div>
+        <div id="gifts-2" class="slide last">
+          <div class="wrapper">
+            <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
+          </div>
+          <div class="wrapper">
+            <div class="image sizable">
+              <div data-picture data-disable-swap-above data-alt="">
+                <div data-src="img/sg_nav-400.jpg"></div>
+                <div data-src="img/sg_nav-800.jpg" data-media="(min-device-pixel-ratio: 2.0)"></div>
+                <div data-src="img/sg_nav-800.jpg" data-media="(min-width: 400px)"></div>
+                <div data-src="img/sg_nav-1600.jpg" data-media="(min-width: 400px) and (min-device-pixel-ratio: 2.0)"></div>
+                <div data-src="img/sg_nav-1600.jpg" data-media="(min-width: 800px)"></div>
+                <div data-src="img/sg_nav-3200.jpg" data-media="(min-width: 1600px)"></div>
+                <!-- non-js browsers-->
+                <noscript><img src="img/sg_nav-400.jpg" alt=""></noscript>
+              </div>
+            </div>
+          </div>
+          <div class="wrapper">
+            <div class="info sizable">
+              <div class="infoinner">
+                <h3>Navigation</h3>
+                <ul>
+                  <li>info here</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
@@ -171,7 +201,7 @@
           </div>
           <div class="wrapper">
             <div class="image sizable">
-              <div data-picture data-disable-swap-above data-alt="Slipcase and cover for Jonah book">
+              <div data-picture data-disable-swap-above data-alt="">
                 <div data-src="img/jonah1-400.jpg"></div>
                 <div data-src="img/jonah1-800.jpg" data-media="(min-device-pixel-ratio: 2.0)"></div>
                 <div data-src="img/jonah1-800.jpg" data-media="(min-width: 400px)"></div>
@@ -179,7 +209,7 @@
                 <div data-src="img/jonah1-1600.jpg" data-media="(min-width: 800px)"></div>
                 <div data-src="img/jonah1-3200.jpg" data-media="(min-width: 1600px)"></div>
                 <!-- non-js browsers-->
-                <noscript><img src="img/jonah1-400.jpg" alt="A giant stone face at The Bayon temple in Angkor Thom, Cambodia"></noscript>
+                <noscript><img src="img/jonah1-400.jpg" alt=""></noscript>
               </div>
             </div>
           </div>
@@ -212,7 +242,7 @@
           </div>
           <div class="wrapper">
             <div class="image sizable">
-              <div data-picture data-disable-swap-above data-alt="Slipcase and cover for Jonah book">
+              <div data-picture data-disable-swap-above data-alt="">
                 <div data-src="img/jonah2-400.jpg"></div>
                 <div data-src="img/jonah2-800.jpg" data-media="(min-device-pixel-ratio: 2.0)"></div>
                 <div data-src="img/jonah2-800.jpg" data-media="(min-width: 400px)"></div>
@@ -220,7 +250,7 @@
                 <div data-src="img/jonah2-1600.jpg" data-media="(min-width: 800px)"></div>
                 <div data-src="img/jonah2-3200.jpg" data-media="(min-width: 1600px)"></div>
                 <!-- non-js browsers-->
-                <noscript><img src="img/jonah2-400.jpg" alt="A giant stone face at The Bayon temple in Angkor Thom, Cambodia"></noscript>
+                <noscript><img src="img/jonah2-400.jpg" alt=""></noscript>
               </div>
             </div>
           </div>
