--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
     <!-- Scripts loaded via script loader. See notes in init.js file.-->
     <script type="text/javascript" src="//use.typekit.net/nyn3skg.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-    <script src="js/script.min.js"></script>
+    <script src="js/libs/modernizr.min.js"></script>
   </head>
   <body>
     <header class="main">
       <h1>Nate Walton</h1>
       <nav><a href="/">Home</a><a href="/">Portfolio</a></nav>
     </header>
-    <div class="main portfolio">
+    <div class="main portfolio show-info">
       <nav><a href="#" class="ir next">Next slide</a><a href="#" class="ir prev">Previous slide</a></nav>
-      <div id="intro" data-project="0" class="project current">
+      <div id="intro" data-project="0" class="project">
         <div class="title">
           <h2>Work</h2>
         </div>
-        <div id="intro-1" class="slide intro last visible">
+        <div id="intro-1" class="slide intro last">
           <div class="wrapper">
             <div class="sizable">
               <ul class="projectThumb">
                 <li><a href="#gifts" class="projectTitle">Sacred Gifts</a></li>
-                <li><a href="#gifts-2">Slide 2<img src="img/sg_nav-400.jpg"></a></li>
+                <li><a href="#gifts-2"><span class="slideLink visuallyhidden">Slide 2</span><img src="img/sg_nav-400.jpg"></a></li>
               </ul>
               <ul class="projectThumb">
                 <li><a href="#byu" class="projectTitle">BYU Web</a></li>
@@ -52,8 +52,8 @@
               </ul>
               <ul class="projectThumb">
                 <li><a href="#jonah" class="projectTitle">Jonah</a></li>
-                <li><a href="#jonah-2">Slide 2<img src="img/jonah1-400.jpg"></a></li>
-                <li><a href="#jonah-3">Slide 3<img src="img/jonah2-400.jpg"></a></li>
+                <li><a href="#jonah-2"><span class="slideLink visuallyhidden">Slide 2</span><img src="img/jonah1-400.jpg"></a></li>
+                <li><a href="#jonah-3"><span class="slideLink visuallyhidden">Slide 3</span><img src="img/jonah2-400.jpg"></a></li>
               </ul>
               <ul class="projectThumb">
                 <li><a href="#ornate" class="projectTitle">Ornate</a></li>
@@ -81,17 +81,8 @@
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper">
-            <div class="image sizable">
-              <div data-picture data-disable-swap-above data-alt="">
-                <div data-src="img/sg_nav-400.jpg"></div>
-                <div data-src="img/sg_nav-800.jpg" data-media="(min-device-pixel-ratio: 2.0)"></div>
-                <div data-src="img/sg_nav-800.jpg" data-media="(min-width: 400px)"></div>
-                <div data-src="img/sg_nav-1600.jpg" data-media="(min-width: 400px) and (min-device-pixel-ratio: 2.0)"></div>
-                <div data-src="img/sg_nav-1600.jpg" data-media="(min-width: 800px)"></div>
-                <div data-src="img/sg_nav-3200.jpg" data-media="(min-width: 1600px)"></div>
-                <!-- non-js browsers-->
-                <noscript><img src="img/sg_nav-400.jpg" alt=""></noscript>
-              </div>
+            <div class="image sizable"><img alt="" data-src-base="img/" data-src-base2x="img/" data-src="&lt;444:sg_nav-400.jpg, &lt;888:sg_nav-800.jpg, &lt;1777:sg_nav-1600.jpg, &gt;1777:sg_nav-3200.jpg" data-src2x="&lt;444:sg_nav-800.jpg, &lt;888:sg_nav-1600.jpg, &gt;888:sg_nav-3200.jpg">
+              <noscript><img alt="" src="img/sg_nav-400.jpg"></noscript>
             </div>
           </div>
           <div class="wrapper">
@@ -200,17 +191,8 @@
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper">
-            <div class="image sizable">
-              <div data-picture data-disable-swap-above data-alt="">
-                <div data-src="img/jonah1-400.jpg"></div>
-                <div data-src="img/jonah1-800.jpg" data-media="(min-device-pixel-ratio: 2.0)"></div>
-                <div data-src="img/jonah1-800.jpg" data-media="(min-width: 400px)"></div>
-                <div data-src="img/jonah1-1600.jpg" data-media="(min-width: 400px) and (min-device-pixel-ratio: 2.0)"></div>
-                <div data-src="img/jonah1-1600.jpg" data-media="(min-width: 800px)"></div>
-                <div data-src="img/jonah1-3200.jpg" data-media="(min-width: 1600px)"></div>
-                <!-- non-js browsers-->
-                <noscript><img src="img/jonah1-400.jpg" alt=""></noscript>
-              </div>
+            <div class="image sizable"><img alt="" data-src-base="img/" data-src-base2x="img/" data-src="&lt;444:jonah1-400.jpg, &lt;888:jonah1-800.jpg, &lt;1777:jonah1-1600.jpg, &gt;1777:jonah1-3200.jpg" data-src2x="&lt;444:jonah1-800.jpg, &lt;888:jonah1-1600.jpg, &gt;888:jonah1-3200.jpg">
+              <noscript><img alt="" src="img/jonah1-400.jpg"></noscript>
             </div>
           </div>
           <div class="wrapper">
@@ -241,17 +223,8 @@
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper">
-            <div class="image sizable">
-              <div data-picture data-disable-swap-above data-alt="">
-                <div data-src="img/jonah2-400.jpg"></div>
-                <div data-src="img/jonah2-800.jpg" data-media="(min-device-pixel-ratio: 2.0)"></div>
-                <div data-src="img/jonah2-800.jpg" data-media="(min-width: 400px)"></div>
-                <div data-src="img/jonah2-1600.jpg" data-media="(min-width: 400px) and (min-device-pixel-ratio: 2.0)"></div>
-                <div data-src="img/jonah2-1600.jpg" data-media="(min-width: 800px)"></div>
-                <div data-src="img/jonah2-3200.jpg" data-media="(min-width: 1600px)"></div>
-                <!-- non-js browsers-->
-                <noscript><img src="img/jonah2-400.jpg" alt=""></noscript>
-              </div>
+            <div class="image sizable"><img alt="" data-src-base="img/" data-src-base2x="img/" data-src="&lt;444:jonah2-400.jpg, &lt;888:jonah2-800.jpg, &lt;1777:jonah2-1600.jpg, &gt;1777:jonah2-3200.jpg" data-src2x="&lt;444:jonah2-800.jpg, &lt;888:jonah2-1600.jpg, &gt;888:jonah2-3200.jpg">
+              <noscript><img alt="" src="img/jonah2-400.jpg"></noscript>
             </div>
           </div>
           <div class="wrapper">
@@ -296,5 +269,6 @@
       </div>
     </div>
     <footer class="main"></footer>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
