Update responsive images solution

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper">
-            <div class="image sizable"><img alt="" data-src-base="img/" data-src-base2x="img/" data-src="&lt;444:sg_nav-400.jpg, &lt;888:sg_nav-800.jpg, &lt;1777:sg_nav-1600.jpg, &gt;1777:sg_nav-3200.jpg" data-src2x="&lt;444:sg_nav-800.jpg, &lt;888:sg_nav-1600.jpg, &gt;888:sg_nav-3200.jpg">
+            <div class="image sizable"><img alt="" data-src="sg_nav" data-ext=".jpg" class="responsive">
               <noscript><img alt="" src="img/sg_nav-400.jpg"></noscript>
             </div>
           </div>
@@ -191,7 +191,7 @@
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper">
-            <div class="image sizable"><img alt="" data-src-base="img/" data-src-base2x="img/" data-src="&lt;444:jonah1-400.jpg, &lt;888:jonah1-800.jpg, &lt;1777:jonah1-1600.jpg, &gt;1777:jonah1-3200.jpg" data-src2x="&lt;444:jonah1-800.jpg, &lt;888:jonah1-1600.jpg, &gt;888:jonah1-3200.jpg">
+            <div class="image sizable"><img alt="" data-src="jonah1" data-ext=".jpg" class="responsive">
               <noscript><img alt="" src="img/jonah1-400.jpg"></noscript>
             </div>
           </div>
@@ -223,7 +223,7 @@
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper">
-            <div class="image sizable"><img alt="" data-src-base="img/" data-src-base2x="img/" data-src="&lt;444:jonah2-400.jpg, &lt;888:jonah2-800.jpg, &lt;1777:jonah2-1600.jpg, &gt;1777:jonah2-3200.jpg" data-src2x="&lt;444:jonah2-800.jpg, &lt;888:jonah2-1600.jpg, &gt;888:jonah2-3200.jpg">
+            <div class="image sizable"><img alt="" data-src="jonah2" data-ext=".jpg" class="responsive">
               <noscript><img alt="" src="img/jonah2-400.jpg"></noscript>
             </div>
           </div>
